完成导航栏

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
     <meta name="description" content="微思敦企业门户">
     <meta name="renderer" content="webkit|ie-comp|ie-stand">
-    <link href="http://www.datatables.net/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="./static/s_ic_wesdom.png" rel="shortcut icon" type="image/x-icon">
     <!--[if lt IE 9]>
     <script>
       alert('您当前浏览器版本过低，请升级您的浏览器或者下载 Google Chrome');
